# stk_robo_violinist

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  configure.ac
projects/bowed_simulator/: CMakeLists.txt  README.md  bowed_simulator.py  quick_start.py
projects/bowed_simulator/include/: MyBowed.h
projects/bowed_simulator/pybind/: MyBowedBindings.cpp
projects/bowed_simulator/src/: MyBowed.cpp  example_usage.cpp  main.cpp
